# SSPP

./: CMakeLists.txt  README.txt  proj_build.sh
include/: ProcessingUnit1.hpp  ProcessingUnit2.hpp  ProcessingUnit3.hpp  SSPP.hpp
src/: CMakeLists.txt  ProcessingUnit1.cpp  ProcessingUnit2.cpp  ProcessingUnit3.cpp  SSPP.cpp
test/: CMakeLists.txt  Test.cpp
